@@ -18,8 +18,8 @@
 
 # gnulib modules used by this package.
 gnulib_modules="
-    acl alloca btowc extensions getline getopt gettext localcharset memchr \
-    memcmp mbrlen mbrtowc memmove mkstemp obstack pathmax regex stdbool
+    acl alloca btowc extensions getline getopt gettext localcharset \
+    mbrlen mbrtowc mkstemp obstack pathmax regex stdbool
     stat-macros strerror strverscmp unlocked-io verify wcrtomb wctob"
 
 checkout_only_file=
